:pencil: Fixed root doc definition : must put it on main.go for swaggo
